--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,172 +2,177 @@ name: CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ "main" ]
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+
 env:
-  DOTNET_VERSION: '8.0.x'
-  SOLUTION_FILE: Aura.sln
+  DOTNET_VERSION: "8.0.x"
+  NODE_VERSION: "20.x"
+  AURA_WEB_DIR: "Aura.Web"
+  AURA_API_DIR: "Aura.Api"
 
 jobs:
-  build-and-test:
-    name: Build and Test
-    runs-on: windows-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
-        
-    - name: Restore dependencies
-      run: dotnet restore ${{ env.SOLUTION_FILE }}
-      
-    - name: Build Aura.Core
-      run: dotnet build Aura.Core/Aura.Core.csproj --configuration Release --no-restore
-      
-    - name: Build Aura.Providers
-      run: dotnet build Aura.Providers/Aura.Providers.csproj --configuration Release --no-restore
-      
-    - name: Build Aura.Tests
-      run: dotnet build Aura.Tests/Aura.Tests.csproj --configuration Release --no-restore
-      
-    - name: Build Aura.E2E
-      run: dotnet build Aura.E2E/Aura.E2E.csproj --configuration Release --no-restore
-      
-    - name: Run Unit Tests
-      run: dotnet test Aura.Tests/Aura.Tests.csproj --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=unit-tests.trx"
-      
-    - name: Run E2E Tests
-      run: dotnet test Aura.E2E/Aura.E2E.csproj --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=e2e-tests.trx"
-      
-    - name: Upload Test Results
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: test-results
-        path: |
-          **/TestResults/*.trx
-    
-    - name: Upload E2E Smoke Test Artifacts
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: e2e-smoke-artifacts
-        path: |
-          ${{ runner.temp }}/aura-e2e-artifacts/
-        retention-days: 30
-  
-  portable-only-guard:
-    name: Portable-Only Policy Check
+  dotnet-build-test:
+    name: .NET Build & Test
     runs-on: ubuntu-latest
-    continue-on-error: true
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
+
+      - name: Restore
+        run: dotnet restore
+
+      - name: Build (Release)
+        run: dotnet build --configuration Release --no-restore
+
+      - name: Run Unit Tests
+        run: dotnet test --configuration Release --no-build --logger "trx;LogFileName=test-results.trx"
       
-    - name: Run CI Guard
-      run: |
-        chmod +x scripts/cleanup/ci_guard.sh
-        ./scripts/cleanup/ci_guard.sh
-  
-  web-tests:
-    name: Web Frontend Tests
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: dotnet-test-results
+          path: "**/TestResults/*.trx"
+
+  web-lint-build:
+    name: Web Lint & Build
     runs-on: ubuntu-latest
-    
+    defaults:
+      run:
+        working-directory: ${{ env.AURA_WEB_DIR }}
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'npm'
-        cache-dependency-path: Aura.Web/package-lock.json
-        
-    - name: Install dependencies
-      working-directory: Aura.Web
-      run: npm ci
-      
-    - name: Run Type Check
-      working-directory: Aura.Web
-      run: npm run typecheck
-      
-    - name: Run Vitest
-      working-directory: Aura.Web
-      run: npm test
-      
-    - name: Run Vitest with Coverage
-      working-directory: Aura.Web
-      run: npm run test:coverage
-      
-    - name: Build Production Bundle
-      working-directory: Aura.Web
-      run: npm run build:prod
-      
-    - name: Check Bundle Size
-      working-directory: Aura.Web
-      run: |
-        echo "=== Production Bundle Sizes ==="
-        du -sh dist/
-        echo ""
-        echo "=== Main Chunks (Largest 5) ==="
-        find dist/assets -name "*.js" -not -name "*.map.js" -not -name "*.gz" -not -name "*.br" | xargs du -h | sort -h | tail -5
-        echo ""
-        echo "=== Compressed Sizes (Brotli) ==="
-        find dist/assets -name "*.js.br" | xargs du -h | sort -h | tail -5
-      
-    - name: Verify Source Maps Hidden
-      working-directory: Aura.Web
-      run: |
-        # Check if any .js files exist in dist/assets before grepping
-        if find dist/assets -name "*.js" -type f | grep -q .; then
-          if grep -r "sourceMappingURL" dist/assets/*.js 2>/dev/null; then
-            echo "ERROR: Source maps should be hidden in production!"
-            exit 1
-          else
-            echo "✓ Source maps are properly hidden"
-          fi
-        else
-          echo "WARNING: No JavaScript files found in dist/assets"
-          exit 1
-        fi
-      
-    - name: Upload Build Stats
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: bundle-stats
-        path: Aura.Web/dist/stats.html
-        retention-days: 7
-      
-    - name: Install Playwright
-      working-directory: Aura.Web
-      run: npm run playwright:install
-      
-    - name: Run Playwright E2E Tests
-      working-directory: Aura.Web
-      run: npm run playwright
-      
-    - name: Upload Playwright Report
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: playwright-report
-        path: Aura.Web/playwright-report/
-        retention-days: 30
-        
-    - name: Upload Coverage Report
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: coverage-report
-        path: Aura.Web/coverage/
-        retention-days: 30
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: "npm"
+          cache-dependency-path: |
+            ${{ env.AURA_WEB_DIR }}/package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Lint (ESLint/Stylelint if present)
+        run: |
+          npm run lint --if-present
+          npm run stylelint --if-present
+
+      - name: Type Check
+        run: npm run typecheck --if-present
+
+      - name: Build
+        run: npm run build
+
+      - name: Upload Web Build Artifacts
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: aura-web-dist
+          path: ${{ env.AURA_WEB_DIR }}/dist
+
+  web-e2e:
+    name: Web E2E (Playwright)
+    runs-on: ubuntu-latest
+    needs: [ web-lint-build ]
+    defaults:
+      run:
+        working-directory: ${{ env.AURA_WEB_DIR }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: "npm"
+          cache-dependency-path: |
+            ${{ env.AURA_WEB_DIR }}/package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+      - name: Run Playwright tests (headed=false)
+        run: |
+          npx playwright test --reporter=list || npx playwright show-report
+
+      - name: Upload Playwright report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: ${{ env.AURA_WEB_DIR }}/playwright-report
+          if-no-files-found: ignore
+
+  docs:
+    name: Docs Lint, Build, and Link Check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Markdownlint
+        uses: DavidAnson/markdownlint-cli2-action@v16
+        with:
+          globs: |
+            **/*.md
+          config: |
+            {
+              "MD013": false,
+              "MD033": false,
+              "MD041": false
+            }
+
+      - name: Setup .NET (for docfx)
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
+
+      - name: Install docfx tool
+        run: dotnet tool update -g docfx
+
+      - name: Build docs (docfx)
+        run: |
+          ~/.dotnet/tools/docfx build docfx.json
+        continue-on-error: true
+
+      - name: Upload docfx site (if generated)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: docfx-site
+          path: _site
+          if-no-files-found: ignore
+
+      - name: Link check (lychee)
+        uses: lycheeverse/lychee-action@v2
+        with:
+          args: >
+            --verbose
+            --no-progress
+            --accept 200,206,429
+            --exclude-path "node_modules|_site"
+            .
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
