Refactor timeline handling in EditorController and JobsController to utilize ArtifactManager for loading and saving timelines. Update error messages for better clarity. Adjust API service registrations and improve logging for job progress and error handling. Enhance frontend API interactions to support new Aura runtime features and improve file dialog handling in Electron environment.

--- a/Aura.Desktop/package.json
+++ b/Aura.Desktop/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "start": "electron .",
     "dev": "electron . --dev",
+    "dev:desktop": "node scripts/dev-server.js",
     "debug-startup": "electron . --debug-startup",
     "electron:dev": "npm run prebuild:check && electron . --dev",
     "electron:build": "npm run build:all && electron-builder build --win",
