Enhance FFmpeg integration by adding environment overrides, ensuring bundled binaries, and updating UI components. The build script now downloads Windows x64 FFmpeg, and the onboarding process reflects local provider readiness. Updated documentation for FFmpeg setup and usage.

--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,8 @@ test-data/
 .env
 .env.local
 data/
+Aura.Desktop/resources/ffmpeg/**/bin/
+Aura.Desktop/resources/cache/
 !Aura.Core/Data/
 !Aura.Core/Data/**
 logs/
