--- a/Aura.Desktop/package.json
+++ b/Aura.Desktop/package.json
@@ -17,6 +17,7 @@
     "start": "electron .",
     "dev": "electron . --dev",
     "dev:desktop": "node scripts/dev-server.js",
+    "ffmpeg:ensure": "node scripts/download-ffmpeg.js",
     "debug-startup": "electron . --debug-startup",
     "electron:dev": "npm run prebuild:check && electron . --dev",
     "electron:build": "npm run build:all && electron-builder build --win",
