--- a/Aura.Web/.lintstagedrc.json
+++ b/Aura.Web/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
-  "*.{ts,tsx}": ["eslint --max-warnings 0", "prettier --write"],
+  "*.{ts,tsx}": ["eslint --max-warnings 0 --no-warn-ignored", "prettier --write"],
   "*.css": ["stylelint --max-warnings 0", "prettier --write"],
   "*.{json,md}": ["prettier --write"]
 }
