Fix: Ideation operations now use Ollama provider by default

--- a/appsettings.json
+++ b/appsettings.json
@@ -203,5 +203,12 @@
         "TtlSeconds": 7200
       }
     ]
+  },
+  "AgenticMode": {
+    "Enabled": false,
+    "MaxIterations": 3,
+    "TimeoutPerIterationSeconds": 180,
+    "EnableLogging": true,
+    "FallbackToSinglePass": true
   }
 }
